# tradingapp

./: .env.example  .gitignore  LICENSE  README.md  clean_eof.py  docker-compose.yml  implementation_plan.md  implementation_plan_autonomous_trading_bot.md  implementation_plan_trading_anlysis.md  live_trading_capabilities.md  pyproject.toml  refactor.py  refactor2.py  scratch.py  start.bat  start.sh  test.sh
.github/workflows/: ci.yml  cloudflare-pages.yml  release.yml  security.yml
config/: default.yaml  live_crypto_binance.yaml  live_stocks_alpaca.yaml  paper_trading.yaml
docker/: Dockerfile  docker-compose.yml  prometheus.yml
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: TradingChart.jsx
frontend/src/hooks/: useBotData.js
src/tradingbot/: __init__.py  main.py
src/tradingbot/analysis/: advanced_aggregator.py  microstructure.py  ml_model.py  quantitative.py  sentiment.py  technical.py  timeframe.py
src/tradingbot/analytics/: __init__.py  performance.py
src/tradingbot/api/: __init__.py  main.py  routes.py
src/tradingbot/cli/: commands.py
src/tradingbot/config/: loader.py  schema.py
src/tradingbot/core/: engine.py  event_bus.py  events.py
src/tradingbot/data/: base.py  history.py  normalizer.py
src/tradingbot/data/feeds/: __init__.py  alpaca_feed.py  ccxt_feed.py  macro_feed.py  simulator.py
src/tradingbot/execution/: __init__.py  order_manager.py  retry.py  risk_manager.py
src/tradingbot/execution/brokers/: __init__.py  alpaca_broker.py  base.py  ccxt_broker.py  paper_broker.py
src/tradingbot/monitoring/: logger.py  metrics.py
src/tradingbot/monitoring/alerts/: base.py  email.py  telegram.py
src/tradingbot/persistence/: __init__.py  database.py  models.py  repository.py
src/tradingbot/portfolio/: __init__.py  models.py  tracker.py
src/tradingbot/risk/: __init__.py  circuit_breaker.py  limits.py  manager.py  position_sizer.py
src/tradingbot/strategy/: __init__.py  base.py  registry.py
src/tradingbot/strategy/builtin/: __init__.py  advanced_strategy.py  bollinger.py  rsi_strategy.py  sma_crossover.py
tests/: conftest.py
tests/integration/: test_full_cycle.py
tests/unit/: test_advanced_aggregator.py  test_advanced_analysis.py  test_advanced_features.py  test_config_loader.py  test_coverage_boost.py  test_coverage_deep.py  test_coverage_final.py  test_engine.py  test_event_bus.py  test_events.py  test_execution.py  test_infrastructure.py  test_manual_override.py  test_microstructure.py  test_portfolio.py  test_risk_manager.py  test_strategies.py  test_symbol_management.py
