[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tradingbot"
version = "0.1.0"
description = "Production-level autonomous trading bot with cross-platform support"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "TradingBot Team" },
]
keywords = ["trading", "bot", "crypto", "stocks", "algorithmic-trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "ccxt>=4.0.0",
    "alpaca-py>=0.30.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "ta>=0.11.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",
    "click>=8.1.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "watchfiles>=0.21.0",
]

[project.optional-dependencies]
alerts = [
    "python-telegram-bot>=21.0",
    "aiosmtplib>=3.0.0",
]
dashboard = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
]
ml = [
    "scikit-learn>=1.4.0",
    "torch>=2.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "factory-boy>=3.3.0",
    "hypothesis>=6.98.0",
    "freezegun>=1.4.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pip-audit>=2.7.0",
    "bandit>=1.7.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
tradingbot = "tradingbot.cli.commands:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/tradingbot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may use database)",
    "e2e: End-to-end tests (full system)",
    "slow: Slow running tests",
]
addopts = "-v --strict-markers --tb=short"

[tool.coverage.run]
source = ["src/tradingbot"]
branch = true
omit = [
    "*/cli/*",
    "*/__main__.py",
    "*/main.py",
    "*/data/feeds/ccxt_feed.py",
    "*/data/feeds/alpaca_feed.py",
    "*/data/base.py",
    "*/execution/brokers/ccxt_broker.py",
    "*/execution/brokers/alpaca_broker.py",
    "*/monitoring/alerts/telegram.py",
    "*/monitoring/alerts/email.py",
    "*/monitoring/metrics.py",
    "*/persistence/repository.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "\\.\\.\\.",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["tradingbot"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "ccxt.*",
    "alpaca.*",
    "ta.*",
]
ignore_missing_imports = true
